--- a/content/resources/mit6_0001f16_lec11.md
+++ b/content/resources/mit6_0001f16_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "\r\nThis file contains information regarding lecture 11 notes."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/bb953fb81d4afa3bc837c16eba613955_MIT6_0001F16_Lec11.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: 'MIT6_0001F16_Understanding Program Efficiency: 2'
 uid: bb953fb8-1d4a-fa3b-c837-c16eba613955
