--- a/content/resources/mit6_0001f16_lec12.md
+++ b/content/resources/mit6_0001f16_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 12 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/6425d0dabb1cea1a076b8c46c0ae2da6_MIT6_0001F16_Lec12.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Searching and Sorting Algorithms
 uid: 6425d0da-bb1c-ea1a-076b-8c46c0ae2da6
