--- a/content/resources/mit6_0001f16_lec2.md
+++ b/content/resources/mit6_0001f16_lec2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 2 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/ba2947b25b1580e4a84df0ec5dbe5cdd_MIT6_0001F16_Lec2.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Branching, Iteration
 uid: ba2947b2-5b15-80e4-a84d-f0ec5dbe5cdd
