--- a/content/resources/mit6_0001f16_lec5.md
+++ b/content/resources/mit6_0001f16_lec5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 5 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/1776670e271578eeb99fc25975f20586_MIT6_0001F16_Lec5.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Tuples, Lists, Aliasing, Mutability, Cloning
 uid: 1776670e-2715-78ee-b99f-c25975f20586
