--- a/content/resources/mit6_0001f16_lec6.md
+++ b/content/resources/mit6_0001f16_lec6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 6 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/876348c652c5353daccc96e1b7d577bb_MIT6_0001F16_Lec6.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Recursion, Dictionaries
 uid: 876348c6-52c5-353d-accc-96e1b7d577bb
