--- a/content/resources/mit6_0001f16_lec7.md
+++ b/content/resources/mit6_0001f16_lec7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 7 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/51bdde43dfd773ba20747ce5d89119ac_MIT6_0001F16_Lec7.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Testing, Debugging, Exceptions, Assertions
 uid: 51bdde43-dfd7-73ba-2074-7ce5d89119ac
