--- a/content/resources/mit6_0001f16_lec8.md
+++ b/content/resources/mit6_0001f16_lec8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains information regarding lecture 8 notes.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/7a6f85d03f132dcd9d7592bc4643be1c_MIT6_0001F16_Lec8.pdf
 file_type: application/pdf
+parent_uid: f39a25a3-5f6b-0d3e-6388-e9b2e8b7438e
 resourcetype: Document
 title: MIT6_0001F16_Object Oriented Programming
 uid: 7a6f85d0-3f13-2dcd-9d75-92bc4643be1c
